feat: implement admin and super admin
can create all 3 token in one client.super have no model. manually create superAdmin credentials to the  database collection namde super.
