# src/routes/v1/v1.js
@@ -1,6 +1,8 @@
 import express from 'express'
 import authRoutes from './authRoutes.js'
 import userRoutes from './userRoutes.js'
+import adminRoutes from './adminRoutes.js'
+import superAdmin from './superAdmin.js'
 import { verifyToken } from '../../middlewares/verifyToken.js'
 
 const router = express.Router()
@@ -9,6 +11,18 @@ router
     '/auth',
     authRoutes
     /* #swagger.tags = ['Auth routes']
+       #swagger.responses[500] */
+  )
+  .use(
+    '/admin',
+    adminRoutes
+    /* #swagger.tags = ['Admin routes']
+       #swagger.responses[500] */
+  )
+  .use(
+    '/super',
+    superAdmin
+    /* #swagger.tags = ['Super routes']
        #swagger.responses[500] */
   )
   .use(
